@@ -77,7 +77,6 @@ dnl
 AM_CONDITIONAL([CAIRO_HAS_QUARTZ_IMAGE_SURFACE], [false])
 AM_CONDITIONAL([CAIRO_HAS_OS2_SURFACE], [false])
 AM_CONDITIONAL([CAIRO_HAS_GL_SURFACE], [false])
-AM_CONDITIONAL([NEVER], [false])
 
 KPSE_PIXMAN_FLAGS
 
